Remove prepare script from cli package (script doesn't exist)

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,8 +14,7 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "start": "node dist/index.js",
-    "lint": "eslint src/**/*.ts",
-    "prepare": "node scripts/check-runtime.js"
+    "lint": "eslint src/**/*.ts"
   },
   "keywords": [
     "voice",
