Add LaunchAgent-based daemon management and HuggingFace support
- Migrate transcription daemon and Kokoro server to use macOS LaunchAgent
- Add setproctitle dependency for Activity Monitor visibility
- Add VTT_HF_TOKEN environment variable for higher HuggingFace rate limits
- Add hf_transfer for faster model/voice downloads
- Remove terminal-table dependency from CLI
- Update speed limit to 3.0 for TTS playback
- Fix voice alias case sensitivity

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,8 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "@vtt/core": "file:../core",
-    "commander": "^12.0.0",
-    "terminal-table": "^0.0.12"
+    "commander": "^12.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
