--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,7 +28,7 @@
   "author": "rex",
   "license": "MIT",
   "dependencies": {
-    "@vtt/core": "file:../core",
+    "@vtt/core": "^1.0.0",
     "commander": "^12.0.0"
   },
   "devDependencies": {
