--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vtt/cli",
   "version": "1.0.0",
-  "description": "Voice-to-Text CLI tool (self-contained with bundled runtime)",
+  "description": "Voice-to-Text CLI tool - Local speech recognition and synthesis",
   "main": "dist/index.js",
   "bin": {
     "vtt": "./dist/index.js"
@@ -12,24 +12,9 @@
   ],
   "scripts": {
     "build": "tsc",
-    "build:binary": "npm run build && npm run build:bundle-runtime && pkg . --out-path=bin",
-    "build:bundle-runtime": "node scripts/bundle-runtime.js",
     "dev": "tsc --watch",
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts"
-  },
-  "pkg": {
-    "scripts": [
-      "dist/**/*.js"
-    ],
-    "assets": [
-      "assets/**/*",
-      "dist/runtime.tar.gz"
-    ],
-    "targets": [
-      "node18-macos-arm64"
-    ],
-    "outputPath": "bin"
   },
   "keywords": [
     "voice",
@@ -38,7 +23,8 @@
     "stt",
     "cli",
     "local",
-    "bundled"
+    "ml",
+    "mlx"
   ],
   "author": "rex",
   "license": "MIT",
@@ -48,7 +34,6 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
-    "pkg": "^5.8.1",
     "typescript": "^5.7.3"
   },
   "engines": {
