--- a/package.json
+++ b/package.json
@@ -170,22 +170,20 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.93.3",
-    "@raycast/utils": "^1.17.0"
+    "@raycast/utils": "^1.17.0",
+    "@vtt/core": "file:packages/core"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^1.0.11",
     "@types/node": "22.13.4",
     "eslint": "^8.57.0",
-    "typescript": "^5.7.3",
-    "vitest": "^4.0.18"
+    "typescript": "^5.7.3"
   },
   "scripts": {
     "build": "ray build",
     "dev": "ray develop",
     "fix-lint": "ray lint --fix",
-    "lint": "ray lint",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "lint": "ray lint"
   },
   "version": ""
 }
